[project]
name = "pyromod"
version = "3.1.6"
description = "A monkeypatcher add-on for Pyrogram that does conversation handling"
dependencies = [
    "pyrogram >= 1.0"
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true